# amr-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindCBC.cmake  FindGUROBI.cmake  FindTAU.cmake
decks/: CMakeLists.txt  advection.example.16.pin.in  blast_wave_3d.1024.pin.in  blast_wave_3d.2048.pin.in  blast_wave_3d.4096.pin.in  blast_wave_3d.512.pin.in  stochsg_2d.1024.pin.in  stochsg_2d.2048.pin.in  stochsg_2d.512.pin.in
lb/: CMakeLists.txt
lb/cmake/: lb-config.cmake.in
lb/include/: amr_lb.h
lb/src/: CMakeLists.txt  amr_lb.cc  assignment_cache.h  lb_chunkwise.cc  lb_chunkwise.h  lb_contig_improv.cc  lb_contig_improv2.cc  lb_cplx.cc  lb_cplx.h  lb_cpp_iter.cc  lb_hybrid.cc  lb_hybrid2.cc  lb_hybrid2.h  lb_ilp.cc  lb_lspt.cc  lb_policies.cc  lb_util.h  policy_utils.cc  tools.h
lb/src/lb-common/: constants.h  iter.h  lb_policies.h  policy.h  policy_utils.h  policy_wopts.h  rank.h  run_utils.h  solver.h  tabular_data.h  trace_utils.h  writable_file.h
lb/tests/: CMakeLists.txt  lb_chunkwise_tests.cc  lb_test1.h  lb_test2.h  lb_test3.h  lb_test4.h  lb_tests.cc  lb_util_tests.cc  policy_tests.cc
scripts/: CMakeLists.txt  amr-minimal.sh.in  amr_common.sh  amr_job_template.txt  amr_suite.csv  gen_amr_jobs.py  gen_topo_jobs.py  run_amr_test.sh.in  run_topo_test.sh.in  topo_job_template.txt.in
tools/: CMakeLists.txt
tools-common/: CMakeLists.txt  alias_method.cc  alias_method.h  common.cc  common.h  config_parser.cc  config_parser.h  distributions.h  globals.cc  globals.h  logging.h  plot_utils.h
tools/amr-preload-plugin/: CMakeLists.txt  amr_monitor.cc  amr_monitor.h  amr_opts.h  common.cc  common.h  detailed_logger.cc  detailed_logger.h  example_prog.cc  kokkos_hooks.cc  metric.h  metric_util.h  mpi_async.h  mpi_hooks.cc  p2p.cc  p2p.h  perfsignal.h  print_utils.h  tracer.h  types.h
tools/amr-tau-plugin/: CMakeLists.txt  Tau_plugin_amr.cc  amr_outputs.h  amr_tracer.cc  amr_tracer.h  amr_util.cc  amr_util.h  tau_types.h
tools/commbench/: CMakeLists.txt  README.md
tools/commbench/config/: test.cfg  topo_template.cfg  topo_test.cfg
tools/commbench/scripts/: run_topo_suite.sh
tools/commbench/src/: CMakeLists.txt  meshdriver_main.cc  topo_types.h
tools/commbench/src/amr/: amr_types.h  block.h  bvar.cc  bvar.h  drain_queue.h  mesh.cc  mesh.h  mesh_main.cc  mesh_utils.h  persistent_req.h  print_utils.h
tools/commbench/src/bench/: comm_mesh.h  driver.cc  driver.h  graph.cc  graph.h  logger.cc  logger.h  mesh_driver.cc  mesh_driver.h  mesh_gen.cc  mesh_gen.h  metric_utils.h  newlogger.cc  newlogger.h  placement_utils.h  single_ts_trace_reader.cc  single_ts_trace_reader.h  topobench.cc  trace_reader.cc  trace_reader.h
tools/commbench/tests/: CMakeLists.txt  topogen_test.cc
tools/commbench/tools/: gen-msgtrace.py
tools/ember-benchmarks/: CMakeLists.txt  README  block_common.h  block_tests.cc  common_flags.h  communicator.cc  communicator.h  halo3d-26.cc  halo3d.cc  halo3d_v2.cc  incast.cc  sweep3d.cc  utils.h
tools/policybench/: CMakeLists.txt  bench_util.h  benchmark.cc  benchmark.h  benchmark_main.cc  benchmark_stats.h  benchmark_test.cc
tools/policysim/: CMakeLists.txt  bin_readers.h  block_alloc_sim.cc  block_alloc_sim.h  block_sim_main.cc  cost_cache.h  policy_exec_ctx.cc  policy_exec_ctx.h  policy_stats.cc  policy_stats.h  policysim_tests.cc  prof_base.h  prof_reader.h  prof_set_reader.h  reader_base.h  simple_sim.cc  simple_sim.h
tools/scalebench/: CMakeLists.txt  inputs.h  outputs.h  scale_exec_ctx.h  scale_sim.cc  scale_sim.h  scale_sim_main.cc  scale_stats.h
